<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.jacobrobertson.banyan</groupId>
	<artifactId>banyan-parent</artifactId>
	<name>banyan-parent</name>
	<version>1.2-SNAPSHOT</version>
	<packaging>pom</packaging>
	<modules>
		<module>banyan-domain</module>
		<module>banyan-search</module>
		<module>banyan-web</module>
	</modules>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.5.1</version>
				<inherited>true</inherited>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
					<optimize>true</optimize>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>